Compiler/tests/typing/bad/testfile-assign-7.rs

fn foo() {return; }
fn main() { let x : i32 = 42; x = foo(); return; }
